# pdf2notion

./: .gitignore  README.md  pyproject.toml
src/pdf2notion/: __init__.py
